# TibiaGamepad

./: .gitignore  CMakeLists.txt  README.md  config_tibia.json  main.py  requirements.txt
.agent/workflows/: build.md
src/: ActionExecutor.cpp  ActionExecutor.h  Config.cpp  Config.h  GamepadHandler.cpp  GamepadHandler.h  InterceptionWrapper.cpp  InterceptionWrapper.h  LogRedirector.h  MainWindow.cpp  MainWindow.h  main.cpp
